k8s_v2/clientlayer.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clientlayer
  labels:
    name: clientlayer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clientlayer
  template:
    metadata:
      labels:
        app: clientlayer
    spec:
      containers:
      - name: clientlayer
        image: localhost:5000/clientlayer
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: clientlayer
  labels:
    service: clientlayer
spec:
  selector:
    app: clientlayer
  ports:
  - port: 8501
    targetPort: 8501
