k8s_v2/datalayer.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datalayer-deployment
  labels:
    name: datalayer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datalayer
  template:
    metadata:
      labels:
        app: datalayer
    spec:
      containers:
      - name: datalayer
        image: datalayer
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: datalayer-service
  labels:
    service: datalayer
spec:
  selector:
    app: datalayer
  ports:
  - port: 8001
    targetPort: 8001
