k8s_v2/mllayer.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mllayer-deployment
  labels:
    name: mllayer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mllayer
  template:
    metadata:
      labels:
        app: mllayer
    spec:
      containers:
      - name: mllayer
        image: mllayer
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mllayer-service
  labels:
    service: mllayer
spec:
  selector:
    app: mllayer
  ports:
  - port: 8002
    targetPort: 8002
