k8s_v2/optimizationlayer.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: optimizationlayer-deployment
  labels:
    name: optimizationlayer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: optimizationlayer
  template:
    metadata:
      labels:
        app: optimizationlayer
    spec:
      containers:
      - name: optimizationlayer
        image: optimizationlayer
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: optimizationlayer-service
  labels:
    service: optimizationlayer
spec:
  selector:
    app: optimizationlayer
  ports:
  - port: 8003
    targetPort: 8003
