k8s_v2/utilitylater.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: utilitylayer-deployment
  labels:
    name: utilitylayer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: utilitylayer
  template:
    metadata:
      labels:
        app: utilitylayer
    spec:
      containers:
      - name: utilitylayer
        image: utilitylayer
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: utilitylayer-service
  labels:
    service: utilitylayer
spec:
  selector:
    app: utilitylayer
  ports:
  - port: 8004
    targetPort: 8004
